Changed class names to variables

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <script>
         $(document).ready(function(){
             $('#green').click(function(){
-                addInputBoxColor('box', true);
+                addInputBoxColor('box', true, 'input-success', 'input-error');
             });
 
             $('#red').click(function(){
-                addInputBoxColor('box', false);
+                addInputBoxColor('box', false, 'input-success', 'input-error');
             });
         });
     </script>
