added remove method

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 </head>
 <body>
     <div id="wrapper">
-        <input type="text" value="Some Text" id="box"/><br>
-        <input type="button" value="Green" id="green"><br>
+        <input type="text" value="Some Text" id="box"/><br><br>
+        <input type="button" value="Green" id="green">
         <input type="button" value="Red" id="red"/>
+        <input type="button" value="Remove" id="remove">
     </div>
 </body>
 </html>
